# DeepCpp

./: .gitmodules  CMakeLists.txt  README.md  install_tensorflow.sh
cmake/: tensorflow.cmake
include/: batch.hpp  deepcpp.hpp  model.hpp  modelbuilder.hpp  onehot.hpp
lib/: .model.cpp.swp  batch.cpp  model.cpp
